--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "swiper": "^11.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
