--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "css-loader": "^7.1.2",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "style-loader": "^4.0.0",
-    "swiper": "^11.2.0"
+    "swiper": "^11.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
