--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "axios": "^1.7.9",
     "css-loader": "^7.1.2",
     "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
-    "react-day-picker": "^9.5.0",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
