--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.3",
     "style-loader": "^4.0.0",
     "swiper": "^11.2.0",
     "yup": "^1.6.1"
